--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -6,11 +6,7 @@ server {
     root /app;
 
     location @backend {
-        proxy_pass http://app:81;
-    }
-
-    location /admin/ {
-        proxy_pass http://app:81;
+        proxy_pass http://score_api:81;
     }
 
     location / {
