--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,38 @@
 version: "3.5"
-name: app_service
+name: score_service
+
+include:
+  - broker/docker-compose.yml
 
 services:
-  app:
+  score_api:
     build:
       context: .
       dockerfile: Dockerfile
     networks:
-      - app_net
+      - score_net
     depends_on:
-      postgres:
+      score_postgres:
         condition: service_healthy
     env_file:
       - .env
 
-  nginx:
+  score_nginx:
     build:
       context: ./nginx
       dockerfile: Dockerfile
     networks:
-      - app_net
+      - score_net
     depends_on:
-      - app
+      - score_api
     ports:
       - "8081:81"
 
-  postgres:
+  score_postgres:
     image: postgres:16
     env_file: .env
     networks:
-      - app_net
+      - score_net
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d $POSTGRES_DB -U $POSTGRES_USER" ]
       interval: 5s
@@ -40,6 +43,19 @@ services:
     ports:
       - "5432:5432"
 
+  consumer:
+    build:
+      context: .
+      dockerfile: worker/Dockerfile
+    networks:
+      - score_net
+    env_file:
+      - .env
+    environment:
+      - DB_ADDRESS=192.168.3.99
+      - TZ=Europe/Moscow
+    restart: unless-stopped
+
 networks:
-  app_net:
-    name: app_net
+  score_net:
+    name: score_net
