--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - ./postgres/data:/var/lib/postgresql/data
+      - postgres/data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
